Multires displacement baking relative to smooth base mesh not working #57517

Closed
opened 2018-10-30 17:03:19 +01:00 by Brecht Van Lommel · 4 comments

System Information
Ubuntu 18.04, GTX 1080.

Blender Version
Broken: Blender 2.8 blender/blender@974d158
Worked: Never?

Short description of error
There is no way to bake multires displacement relative to a smoothly subdivided base mesh. This is what you want when applying displacement with Cycles and adaptive subdivision for example.

Exact steps for others to reproduce the error
Press "Bake" in the attached .blend, the mesh with displacement modifier should be identical to the multires mesh.
multires_bake_level_0.blend

**System Information** Ubuntu 18.04, GTX 1080. **Blender Version** Broken: Blender 2.8 blender/blender@974d158 Worked: Never? **Short description of error** There is no way to bake multires displacement relative to a smoothly subdivided base mesh. This is what you want when applying displacement with Cycles and adaptive subdivision for example. **Exact steps for others to reproduce the error** Press "Bake" in the attached .blend, the mesh with displacement modifier should be identical to the multires mesh. [multires_bake_level_0.blend](https://archive.blender.org/developer/F5298200/multires_bake_level_0.blend)

Added subscriber: @brecht

Added subscriber: @brecht

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

This issue was referenced by blender/blender@e7811ce0c4

This issue was referenced by blender/blender@e7811ce0c41652525545989bb1dfce1c8ab2b46b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57517
No description provided.