Fix T57517: multires displacement baking relative to smooth base mesh not working.

When baking relative to multires level 0, it would apply one level of simple
subdivision still, which gave artifacts.